# gitpulse

./: .env.example  .gitignore  .gitpulse.toml.example  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.antigravity/rules/: project-rules.md
.antigravity/skills/backend-dev/: SKILL.md
.github/workflows/: ci.yml  hygiene.yml  publish.yml
api/: api.py  cache.py  db.py
api/tests/: test_api.py  test_api_edge_cases.py  test_cache.py
cli/: cli.py
cli/tests/: test_cli.py  test_cli_edge_cases.py  test_cli_logic_filtering.py
core/: repo_reader.py  summarise.py
core/tests/: test_core_edge_cases.py  test_repo_reader.py  test_summarise.py  test_summarise_safety.py  test_timezone_boundaries.py  test_utils.py
db/: ddl.sql  dml.sql  playground-1.mongodb.js  schema.sql
docs/api/: api-contract.md
docs/architecture/: overview.md
docs/decisions/: feature-brainstorm-2026-04.md
docs/prd/: PRD.md  prd-v01.md  prd-v02.md  prd-v03.md  prd-web.md
docs/releases/: v0.5-analytics-dashboard.md  v0.6.0.md  v0.7.0.md
docs/sprint/: sprint-01-brief.md  sprint-01-execution-plan.md  sprint-01.md  sprint-02-execution-plan.md  sprint-02-plan.md  sprint-02.md  sprint-03-execution-plan.md  sprint-03-plan.md  sprint-03.md  sprint-04-execution-plan.md  sprint-04.md  sprint-05-brief.md  sprint-05-execution-plan.md  sprint-05.md  sprint-06-brief.md  sprint-06-execution-plan.md  sprint-06.md  sprint-07-brief.md  sprint-07-execution-plan.md  sprint-07.md  sprint-08-brief.md  sprint-08-execution-plan.md  sprint-08.md  sprint-09-brief.md  sprint-09-plan.md  sprint-09.md  sprint-10-brief.md  sprint-10-plan.md  sprint-10.md  sprint-11-brief.md  sprint-11-plan.md  sprint-11.md  sprint-12-brief.md  sprint-12-plan.md  sprint-14-brief.md  sprint-15-brief.md  sprint-16-brief.md  sprint-17-brief.md  sprint-18-brief.md  sprint-hygiene-plan.md
docs/walkthroughs/: sprint-12.md
gitpulse/cli/: cli.py
gitpulse/core/: summarise.py  utils.py
src/: cli.py  repo_reader.py  summarise.py  utils.py
tests/: test_repo_reader.py  test_summarise.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Footer.tsx  Header.tsx  Hero.tsx  Results.tsx  SummaryForm.tsx
web/lib/: api.ts
web/tests/: setup.ts
web/types/: next-auth.d.ts
(+23 files in other folders)
