[project]
name = "gitpulse"
version = "0.1.0"
description = "CLI tool that generates weekly standup summaries from git history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer", "groq", "gitpython", "rich", "python-dotenv", "httpx", "fastapi", "uvicorn", "asyncpg"]

[project.scripts]
gitpulse = "cli.cli:main"

[tool.ruff]
select = ["T20"]

[project.optional-dependencies]
dev = ["pytest", "respx"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["core/tests", "cli/tests", "api/tests"]

[tool.setuptools.packages.find]
include = ["core*", "cli*"]