[project]
name = "gitpulse"
version = "0.6.0"
description = "CLI tool that generates weekly standup summaries from git history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer==0.24.1", 
    "groq==1.1.2", 
    "gitpython==3.1.46", 
    "rich==14.3.3", 
    "python-dotenv==1.2.2", 
    "httpx==0.28.1", 
    "fastapi==0.135.2", 
    "uvicorn==0.42.0", 
    "asyncpg==0.31.0"
]

[project.scripts]
gitpulse = "cli.cli:main"

[tool.ruff]
select = ["T20"]

[project.optional-dependencies]
dev = ["pytest==9.0.2", "respx==0.22.0", "anyio==4.13.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["core/tests", "cli/tests", "api/tests"]

[tool.setuptools.packages.find]
include = ["core*", "cli*"]