[project]
name = "gitpulse"
version = "0.7.0"
description = "AI-powered standup summary generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "typer==0.24.1", 
    "groq==1.1.2", 
    "gitpython==3.1.46", 
    "rich==14.3.3", 
    "python-dotenv==1.2.2", 
    "httpx==0.28.1", 
    "fastapi==0.135.2", 
    "uvicorn==0.42.0", 
    "asyncpg==0.31.0"
]

[project.urls]
Homepage = "https://github.com/deepusharma/gitpulse"
Repository = "https://github.com/deepusharma/gitpulse"

[project.scripts]
gitpulse = "gitpulse.cli.cli:app"

[tool.ruff]
select = ["T20"]

[project.optional-dependencies]
dev = ["pytest==9.0.2", "respx==0.22.0", "anyio==4.13.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["gitpulse/core/tests", "gitpulse/cli/tests", "api/tests"]

[tool.setuptools.packages.find]
include = ["gitpulse*"]